src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* vert : 79, 28%, 44% */
/* rose : 343, 37%, 49% */
/* marrom :18, 36%, 51% */
/* beige : 27, 34%, 65% */
/* violet : 330, 20%, 27% */

@font-face {
  font-family: "DreamingOutLoud";
  src: url("dreaming-outloud-regular.otf");
}

@font-face {
  font-family: "BetterTogether";
  src: url("BetterTogether.otf");
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 330, 20%, 27%;
    --primary-foreground: 0 0% 98%;

    --secondary: 343, 37%, 49%;
    --secondary-foreground: 240 5.9% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 27 34% 65%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.grainy {
}

.book-cover {
  width: auto; /* ajuste la taille selon tes besoins */
  height: 200px;
  margin-inline: auto;
  /*height: auto; /* maintient le ratio hauteur/largeur */
}

/* CSS global ou style dans le fichier JSX */
.bg--cover {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  margin-inline: auto;
}

.bg--cover > :nth-child(odd) {
  background: #f3ece7;
  /* padding: 20px; */
  width: 100%;
  margin-inline: auto;
}

@media only screen and (max-width: 600px) {
  .bg--cover > :nth-child(odd) {
    /* padding: 4px; */
  }
  .bg--cover > :nth-child(even) {
    /* padding: 4px; */
  }
}

.bg--cover > :nth-child(even) {
  background: #e8d5cd;
  /* padding: 20px; */
  width: 100%;
  margin-inline: auto;
}

/* Ajoutez ces styles dans votre fichier CSS global ou dans un fichier séparé */

html,
body {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  width: 100%;
  min-height: 100vh; /* Ajoutez cette ligne pour assurer une hauteur minimale de la fenêtre */
  color: #533745;
  font-size: 20px;
}

.grid-rows-layout {
  display: grid;
  grid-template-rows: auto 1fr auto; /* Trois lignes, la dernière occupant l'espace restant */
  min-height: 100vh; /* Assurez-vous que la grille couvre toute la hauteur de la vue */
}

* {
  box-sizing: border-box;
}

nav {
  height: 158px;
}

footer {
  height: 235px;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 50;
}

.modal {
  background: #fff;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.close-button {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 20px;
  cursor: pointer;
}

@media screen and (max-width: 768px) {
  body {
    font-size: 16px;
  }
  .book-cover {
    /* width: 160px; ajuste la taille selon tes besoins */
    height: 200px;
    margin-inline: 0;
    overflow: hidden;
    /*height: auto; /* maintient le ratio hauteur/largeur */
  }
}

.custom-input {
  word-wrap: break-word;
  white-space: pre-wrap;
  height: 150px;
}

.pagination-button.active {
  background-color: #b07156;
  color: #533745;
}

/* Collapse */
.filter-container {
  width: 100%;
  max-width: 500px; /* Ajustez selon vos besoins */
  margin: 0 auto;
}

.filter-content {
  overflow: hidden;
  height: auto;
  display: flex;
  flex-direction: column;
  background-color: #f3ece7;
  gap: 0.5rem;
  padding: 0.5rem;
  margin-inline: 0.25rem;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.filter-content.collapsed {
  height: 0;
  transition: height 0.3s ease-in-out;
  opacity: 0;
}

.filter-content:not(.collapsed) {
  transition: opacity 0.3s ease-in-out;
  opacity: 1;
}

